--- a/index.html
+++ b/index.html
@@ -8,6 +8,56 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    
+    <div class="container">
+        <div class="ordernow">
+            <div class="menu">
+                <ul>
+                    <li>Home</li>
+                    <li>About</li>
+                    <li>Our Menu</li>
+                    <li>Happy Hour</li>
+                </ul>
+                <div class="star">
+                        
+                </div>
+                <ul>
+                    <li>Catering</li>
+                    <li>Reservation</li>
+                    <li>Gallery</li>
+                    <li>Contact</li>
+                </ul>
+
+            </div>
+            <div class="heading">
+                <h1><span id="street">Street</span> <span id="food">Food</span></h1>
+                <div class="subheading">We don't play with food.</div>
+                <p>When I was a small boy, my father told me never to recommend a church or a woman to anyone. And I have found it wise never to recommend a restaurant either. Something always goes wrong with the cheese sauffle.</p>
+            </div>
+            <div class="eclipse">
+                <img src="" alt="">
+                <img src="" alt="">
+                <img src="" alt="">
+                <img src="" alt="">
+                <img src="" alt="">
+                <img src="" alt="">
+            </div>
+        </div>
+
+        <div class="eattogether">
+            <img src="eating together.png">
+        </div>
+
+        <div class="exploremenu">
+
+        </div>
+
+        <div class="hotdeals">
+
+        </div>
+
+        <div class="contacts">
+
+        </div>
+    </div>
 </body>
 </html>
