--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
                     <li>Happy Hour</li>
                 </ul>
                 <div class="star">
-                        
+                    <img src="./star.png">
+                    <h2>Street food</h2>
                 </div>
                 <ul>
                     <li>Catering</li>
@@ -34,21 +35,31 @@
                 <p>When I was a small boy, my father told me never to recommend a church or a woman to anyone. And I have found it wise never to recommend a restaurant either. Something always goes wrong with the cheese sauffle.</p>
             </div>
             <div class="eclipse">
-                <img src="" alt="">
-                <img src="" alt="">
-                <img src="" alt="">
-                <img src="" alt="">
-                <img src="" alt="">
-                <img src="" alt="">
+                <img src="image 1.png" id="img1">
+                    <img src="image 2 (1).png" id="img2">
+                    <img src="image 2.png" id="img3">
+                    <img src="image 3.png" id="img4">
+                    <img src="image 5 (1).png" id="img5">
+                    <img src="image 6.png" id="img6">
             </div>
         </div>
 
         <div class="eattogether">
             <img src="eating together.png">
+            <div class="eattext">
+                <h2>Eat together</h2>
+                <p>There is something profoundly satisfying about sharing a meal. Eating together, breaking bread together, is one of the most fundamentally unifying of human experiences</p>
+            </div>
         </div>
 
         <div class="exploremenu">
-
+            <div class="head"><h2>Explore <span>Menu</Menu></span></h2></div>
+            <img src="likemeat-73_obA0IB_0-unsplash-removebg-preview.png" id="menu">
+            <img src="likemeat-73_obA0IB_0-unsplash-removebg-preview.png" id="menu">
+            <img src="likemeat-73_obA0IB_0-unsplash-removebg-preview.png" id="menu">
+            <img src="likemeat-73_obA0IB_0-unsplash-removebg-preview.png" id="menu">
+            <img src="likemeat-73_obA0IB_0-unsplash-removebg-preview.png" id="menu">
+            <img src="likemeat-73_obA0IB_0-unsplash-removebg-preview.png" id="menu">
         </div>
 
         <div class="hotdeals">
