added star image

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                     <li>Happy Hour</li>
                 </ul>
                 <div class="star">
-                    <img src="./star.png">
+                    <img src="./star-removebg-preview">
                     <h2>Street food</h2>
                 </div>
                 <ul>
