--- a/index.html
+++ b/index.html
@@ -51,11 +51,13 @@
         </div>
 
         <div class="eattogether">
-            <img src="eating_together.png" height="300px" width="300px">
-            <div class="eattext">
-                <h2>Eat together</h2>
-                <p>There is something profoundly satisfying about sharing a meal. Eating together, breaking bread together, is one of the most fundamentally unifying of human experiences</p>
+            <div class="eating">
+                <img src="eating_together.png" height="300px" width="300px">
             </div>
+                <div class="eattext">
+                    <h2>Eat together</h2>
+                    <p>There is something profoundly satisfying<br> about sharing a meal. Eating together, breaking bread together, is one of the most fundamentally unifying of human experiences</p>
+                </div>
         </div>
 
         <div class="exploremenu">
@@ -77,7 +79,7 @@
                 <h3>Burger Name</h3>
                 <p>There is something </p>
             </div>
-
+            
             <div class="burgermenu">
                 <img src="./burger.png" alt="">
                 <h3>Burger Name</h3>
