--- a/index.html
+++ b/index.html
@@ -63,37 +63,37 @@
         <div class="exploremenu">
             <div class="head"><h2>Explore <span>Menu</Menu></span></h2></div>
             <div class="burgermenu">
-                <img src="./burger.png" alt="">
+                <img src="./burger.png" width="100px" height="100px">
                 <h3>Burger Name</h3>
                 <p>There is something </p>
             </div>
 
             <div class="burgermenu">
-                <img src="./burger.png" alt="">
+                <img src="./burger.png" width="100px" height="100px">
                 <h3>Burger Name</h3>
                 <p>There is something </p>
             </div>
 
             <div class="burgermenu">
-                <img src="./burger.png" alt="">
+                <img src="./burger.png" width="100px" height="100px">
                 <h3>Burger Name</h3>
                 <p>There is something </p>
             </div>
             
             <div class="burgermenu">
-                <img src="./burger.png" alt="">
+                <img src="./burger.png" width="100px" height="100px">
                 <h3>Burger Name</h3>
                 <p>There is something </p>
             </div>
 
             <div class="burgermenu">
-                <img src="./burger.png" alt="">
+                <img src="./burger.png" width="100px" height="100px">
                 <h3>Burger Name</h3>
                 <p>There is something </p>
             </div>
 
             <div class="burgermenu">
-                <img src="./burger.png" alt="">
+                <img src="./burger.png" width="100px" height="100px">
                 <h3>Burger Name</h3>
                 <p>There is something </p>
             </div>
@@ -101,7 +101,18 @@
         </div>
 
         <div class="hotdeals">
+            <div><h3>Hot <span #deals>deals</span></h3></div>
+            <div class="juice">
 
+            </div>
+
+            <div class="dealburger">
+
+            </div>
+
+            <div class="dealtext">
+
+            </div>
         </div>
 
         <div class="contacts">
