added contact section

--- a/index.html
+++ b/index.html
@@ -105,11 +105,11 @@
            
             
             <div class="juice">
-                <img src="./juice.png" alt="">
+                <img src="./juice.png" >
             </div>
 
             <div class="dealburger">
-                <img src="./burger.png" alt="">
+                <img src="./burger.png" >
             </div>
 
             <div class="dealtext">
@@ -121,7 +121,12 @@
         </div>
 
         <div class="contacts">
-
+            <h3>Contact <span id="us">Us</span></h3>
+            <p>There is something profoundly satisfying about sharing a meal. eating together, breaking bread together, is one of the most fundamentally and unifying of human experiences</p>
+            <form>
+                <input type="email" name="email" placeholder="E-mail" class="email">
+                <button type="submit" class="button"></button>
+            </form>
         </div>
     </div>
 </body>
