--- a/index.html
+++ b/index.html
@@ -128,6 +128,31 @@
                 <button type="submit" class="button"></button>
             </form>
         </div>
+        <div class="footer">
+            <footer>
+                <div class="open">
+                    <h4>Sunday - Thursday <br>
+                        4 - 10pm
+                    </h4>
+                    <h4>Friday - Saturday <br>
+                        4 - 10pm
+                    </h4>
+                </div>
+                <div class="address">
+                    <h4>(423) 266-1121</h4><br>
+                    <p>801 Chestnut Street |<br>Chattanooga TN 37402</p>
+                </div>
+                
+                <div class="follow">
+                    <h2>FOLLOW</h2>
+                    <p>GET THE LATEST NEWS. <br> SIGN UP FOR OUR NEWSLETTERS</p>
+                    <p>Website Design</p>
+                </div>
+                <div>
+                    <button id="button">Send</button>
+                </div>
+            </footer>
+        </div>
     </div>
 </body>
 </html>
