added text on explore menu

--- a/index.html
+++ b/index.html
@@ -65,37 +65,39 @@
             <div class="burgermenu">
                 <img src="./burger.png" width="100px" height="100px">
                 <h3>Burger Name</h3>
-                <p>There is something </p>
+                <p>There is something profoundly satisfying about sharing a meal. eating together, breaking bread together is one of the oldest and most fundamentally unifying of human experiences.</p>
             </div>
 
             <div class="burgermenu">
                 <img src="./burger.png" width="100px" height="100px">
                 <h3>Burger Name</h3>
-                <p>There is something </p>
+                <p>There is something profoundly satisfying about sharing a meal. eating together, breaking bread together is one of the oldest and most fundamentally unifying of human experiences.
+
+                </p>
             </div>
 
             <div class="burgermenu">
                 <img src="./burger.png" width="100px" height="100px">
                 <h3>Burger Name</h3>
-                <p>There is something </p>
+                <p>There is something profoundly satisfying about sharing a meal. eating together, breaking bread together is one of the oldest and most fundamentally unifying of human experiences.</p>
             </div>
             
             <div class="burgermenu">
                 <img src="./burger.png" width="100px" height="100px">
                 <h3>Burger Name</h3>
-                <p>There is something </p>
+                <p>There is something profoundly satisfying about sharing a meal. eating together, breaking bread together is one of the oldest and most fundamentally unifying of human experiences.</p>
             </div>
 
             <div class="burgermenu">
                 <img src="./burger.png" width="100px" height="100px">
                 <h3>Burger Name</h3>
-                <p>There is something </p>
+                <p>There is something profoundly satisfying about sharing a meal. eating together, breaking bread together is one of the oldest and most fundamentally unifying of human experiences.</p>
             </div>
 
             <div class="burgermenu">
                 <img src="./burger.png" width="100px" height="100px">
                 <h3>Burger Name</h3>
-                <p>There is something </p>
+                <p>There is something profoundly satisfying about sharing a meal. eating together, breaking bread together is one of the oldest and most fundamentally unifying of human experiences.</p>
             </div>
             
         </div>
