--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
         <div class="contacts">
             <h3>Contact <span id="us">Us</span></h3>
             <p>There is something profoundly satisfying about sharing a meal. eating together, breaking bread together, is one of the most fundamentally and unifying of human experiences</p>
-            <form>
+            <form class="form">
                 <input type="email" name="email" placeholder="E-mail" class="email">
                 <button type="submit" class="button">Send</button>
             </form>
